# second-brain

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  readme.md  sitemap.xml
.github/workflows/: deploy.yml
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  workspace-mobile.json
A%20Digital%20Garden/: index.html
A%20Digital%20Garden/Fe-lang/code-structure--organisation/: index.html
A%20Digital%20Garden/Rust/rustic/: index.html
Blog/: index.html
Blog/Blog/first_post/: index.html
Blog/archive/2025/: index.html
Blog/blog/: index.html
Blog/categories/Hello/: index.html
Blog/categories/World/: index.html
Blog/ffff/: index.html
Blog/first_post/: index.html
about/: index.html
assets/javascripts/: graph.json  interactive_graph.js
digital-garden/: index.html
digital-garden/Fe-lang/code-structure--organisation/: index.html
docs/: About.md  Me.md  readme.md
docs/.obsidian/: app.json  community-plugins.json  daily-notes.json  types.json  workspaces.json
docs/A Digital Garden/: readme.md
docs/Blog/: 2025-04-01.md  2025-04-27.md  readme.md
docs/Digital Garden/: README.md
docs/_templates/: post.md
overrides/assets/javascript/: interactive_graph.js
search/: search_index.json
