[project]
name = "second-brain"
version = "0.1.0"
description = "Second brain / knowledge graph"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-git-authors-plugin>=0.9.4",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-obsidian-interactive-graph-plugin>=0.3.0",
    "mkdocs-obsidian-support-plugin>=1.4.1",
    "mkdocs-publisher>=1.4.6",
]
